@@ -221,14 +221,14 @@ public class ScoreValidator {
         logger.debug("found height: " + height);
         String width = values[3];
         try {
-        	new Integer(height);
+        	Integer.valueOf(height);
         } catch (NumberFormatException npe) {
         	errors.append("Your expression in getExternalValues is incorrect: the third value should be a number, not '" + height + "'; ");
         }
         width = width.replace(")", "");
         logger.debug("found width: " + width);
         try {
-        	new Integer(width);
+        	Integer.valueOf(width);
         } catch (NumberFormatException npe) {
         	errors.append("Your expression in getExternalValues is incorrect: the fourth value should be a number, not '" + width + "'; ");
         }
