@@ -180,7 +180,7 @@ public class ImportCRFDataService {
                         // below to prevent duplicates
 
                         for (EventCRFBean ecb : eventCrfBeans) {
-                            Integer ecbId = new Integer(ecb.getId());
+                            Integer ecbId = Integer.valueOf(ecb.getId());
                             if ((upsert.isDataEntryStarted() && ecb.getStage().equals(DataEntryStage.INITIAL_DATA_ENTRY))
                                     || (upsert.isDataEntryComplete() && ecb.getStage().equals(DataEntryStage.DOUBLE_DATA_ENTRY_COMPLETE)))
                                 if (!eventCRFBeanIds.contains(ecbId)) {
@@ -313,7 +313,7 @@ public class ImportCRFDataService {
                     for (CRFVersionBean crfVersionBean : crfVersionBeans) {
                         ArrayList<EventCRFBean> eventCrfBeans = eventCrfDAO.findByEventSubjectVersion(studyEventBean, studySubjectBean, crfVersionBean);
                         for (EventCRFBean ecb : eventCrfBeans) {
-                            Integer ecbId = new Integer(ecb.getId());
+                            Integer ecbId = Integer.valueOf(ecb.getId());
 
                             if (!eventCRFStatuses.keySet().contains(ecbId) && formDataBean.getEventCRFStatus() != null) {
                                 eventCRFStatuses.put(ecb.getId(), formDataBean.getEventCRFStatus());
@@ -397,7 +397,7 @@ public class ImportCRFDataService {
 
                 int ordinal = 1;
                 try {
-                    ordinal = new Integer(studyEventDataBean.getStudyEventRepeatKey()).intValue();
+                    ordinal = Integer.valueOf(studyEventDataBean.getStudyEventRepeatKey()).intValue();
                 } catch (Exception e) {
                     // trying to catch NPEs, because tags can be without the
                     // repeat key
@@ -433,7 +433,7 @@ public class ImportCRFDataService {
                     EventDefinitionCRFBean eventDefinitionCRF = eventDefinitionCRFDAO.findByStudyEventIdAndCRFVersionId(studyBean, studyEvent.getId(),
                             crfVersion.getId());
                     if (eventCRFBean != null) {
-                        if (permittedEventCRFIds.contains(new Integer(eventCRFBean.getId()))) {
+                        if (permittedEventCRFIds.contains(Integer.valueOf(eventCRFBean.getId()))) {
                             
                             for (ImportItemGroupDataBean itemGroupDataBean : itemGroupDataBeans) {
                                 groupMaxOrdinals.put(itemGroupDataBean.getItemGroupOID(),1);
@@ -481,7 +481,7 @@ public class ImportCRFDataService {
                                         int groupOrdinal = 1;
                                         if (itemGroupDataBean.getItemGroupRepeatKey() != null) {
                                             try {
-                                                groupOrdinal = new Integer(itemGroupDataBean.getItemGroupRepeatKey()).intValue();
+                                                groupOrdinal = Integer.valueOf(itemGroupDataBean.getItemGroupRepeatKey()).intValue();
                                                 if (groupOrdinal > groupMaxOrdinals.get(itemGroupDataBean.getItemGroupOID())) {
                                                     groupMaxOrdinals.put(itemGroupDataBean.getItemGroupOID(),groupOrdinal);
                                                 }
@@ -724,7 +724,7 @@ public class ImportCRFDataService {
             // what if it's a number? should be only numbers
             else if (displayItemBean.getItem().getDataType().equals(ItemDataType.INTEGER)) {
                 try {
-                    new Integer(displayItemBean.getData().getValue());
+                    Integer.valueOf(displayItemBean.getData().getValue());
                     int width = Validator.parseWidth(widthDecimal);
                     if (width > 0 && displayItemBean.getData().getValue().length() > width) {
                         hardv.put(itemOid, "This value exceeds required width=" + width);
@@ -740,13 +740,13 @@ public class ImportCRFDataService {
             // what if it's a float? should be only numbers
             else if (displayItemBean.getItem().getDataType().equals(ItemDataType.REAL)) {
                 try {
-                    new Float(displayItemBean.getData().getValue());
+                    Float.valueOf(displayItemBean.getData().getValue());
                     int width = Validator.parseWidth(widthDecimal);
                     if (width > 0 && displayItemBean.getData().getValue().length() > width) {
                         hardv.put(itemOid, "This value exceeds required width=" + width);
                     }
                     int decimal = Validator.parseDecimal(widthDecimal);
-                    if (decimal > 0 && BigDecimal.valueOf(new Double(displayItemBean.getData().getValue()).doubleValue()).scale() > decimal) {
+                    if (decimal > 0 && BigDecimal.valueOf(Double.valueOf(displayItemBean.getData().getValue()).doubleValue()).scale() > decimal) {
                         hardv.put(itemOid, "This value exceeds required decimal=" + decimal);
                     }
                 } catch (Exception ee) {
@@ -769,7 +769,7 @@ public class ImportCRFDataService {
                 int decimal = Validator.parseDecimal(widthDecimal);
                 if (decimal > 0) {
                     try {
-                        Double d = new Double(displayItemBean.getData().getValue());
+                        Double d = Double.valueOf(displayItemBean.getData().getValue());
                         if (BigDecimal.valueOf(d).scale() > decimal) {
                             hardv.put(itemOid, "This value exceeds required decimal=" + decimal);
                         }
