@@ -457,7 +457,7 @@ public class ImportSpringJob extends QuartzJobBean {
                     if (eventCRFStatus.equals(Status.AVAILABLE) || dataEntryStage.equals(DataEntryStage.INITIAL_DATA_ENTRY)
                             || dataEntryStage.equals(DataEntryStage.INITIAL_DATA_ENTRY_COMPLETE)
                             || dataEntryStage.equals(DataEntryStage.DOUBLE_DATA_ENTRY_COMPLETE) || dataEntryStage.equals(DataEntryStage.DOUBLE_DATA_ENTRY)) {
-                        permittedEventCRFIds.add(new Integer(eventCRFBean.getId()));
+                        permittedEventCRFIds.add(Integer.valueOf(eventCRFBean.getId()));
                     } else {
                         // break out here with an exception
 
@@ -669,8 +669,8 @@ public class ImportSpringJob extends QuartzJobBean {
                                 }
                             }
                             // Update CRF status
-                            if (!eventCrfInts.contains(new Integer(eventCrfBean.getId()))) {
-                                String eventCRFStatus = importedCRFStatuses.get(new Integer(eventCrfBean.getId()));
+                            if (!eventCrfInts.contains(Integer.valueOf(eventCrfBean.getId()))) {
+                                String eventCRFStatus = importedCRFStatuses.get(Integer.valueOf(eventCrfBean.getId()));
                                 if (eventCRFStatus != null && eventCRFStatus.equals(DataEntryStage.INITIAL_DATA_ENTRY.getName())
                                         && eventCrfBean.getStatus().isAvailable()) {
                                     crfBusinessLogicHelper.markCRFStarted(eventCrfBean, ub);
@@ -678,7 +678,7 @@ public class ImportSpringJob extends QuartzJobBean {
                                     crfBusinessLogicHelper.markCRFComplete(eventCrfBean, ub);
                                 }
                                 logger.debug("*** just updated event crf bean: " + eventCrfBean.getId());
-                                eventCrfInts.add(new Integer(eventCrfBean.getId()));
+                                eventCrfInts.add(Integer.valueOf(eventCrfBean.getId()));
                             }
                         }
                         itemDataDao.setFormatDates(true);
